deployment/stg/school-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managex-school-stage
  namespace: stage-managex-school
  labels:
    app: managex-school-stage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: managex-school-stage
  template:
    metadata:
      labels:
        app: managex-school-stage
    spec:
      serviceAccountName: school-stage-service
      volumes:
        - name: school-secrets-stage
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "school-stage-secrets"
      containers:
        - name: managex-school-stg
          image: 399600302704.dkr.ecr.ap-south-1.amazonaws.com/stage-managex-school:stg-laravel-ebd3cb57ec017012063117687782dad32ee5d593
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: school-secrets-stage
              mountPath: "/mnt/secret-store"
              readOnly: true
          lifecycle:
            postStart:
              exec:
                command: ['cp', '-R', '/mnt/secret-store/.env', '/var/www/html/.env']
