deployment/stg/managex-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managex-school-stg-ingress
  namespace: stage-managex-school
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:399600302704:certificate/5aacfe1a-f0a8-4ee0-b09c-8114d1f1429c
spec:
  ingressClassName: alb
  rules: 
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: managex-school-stage-service
                port:
                  number: 80
        
  tls:
    - hosts:
        - greatifystg.school
      secretName: tls-secret
